1.opção-ingress-controle/ingress.yaml

# Criação do ingress SIMPLES apenas para o app (blue)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simples-ingress
  # namespace: default
spec:
  ingressClassName: nginx  ### aponta para o ingress class 
  rules:
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-blue # name service da aplicação 
            port:
              number: 80                  



        



# Instalação do (INGRESS)
#  kubectl apply -f ingress.yaml
#  kubectl get ingressclass

# Acesso app :  http://127.0.0.1.nip.io     ou    http://localhost/

# listando o manifesto ingress-controle
# kubectl get ingress

# listando o ingress-class
#  kubectl get ingressclass

# INCLUIR NUMA ROTA 


#  kubectl apply -f ingress.yaml
